k8s/prajna/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: prajna-api
  namespace: prajna
spec:
  selector:
    app: prajna-api
  ports:
    - port: 8000
      targetPort: 8000
