k8s/prajna/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: prajna-ui
  namespace: prajna
spec:
  selector:
    app: prajna-ui
  ports:
    - port: 80
      targetPort: 80
